# fatlang

./: CMakeLists.txt  README.md
example_programs/: main.fatlang
lib/: CMakeLists.txt
lib/src/: AST.h  evaluate.cpp  evaluate.h  fatlang.cpp  fatlang.h  lexer.cpp  lexer.h  parser.cpp  parser.h  token.h
lib/test/: lexerTest.cpp  parserTest.cpp
src/: main.cpp
